# disney-scrapper

./: LICENSE  README.md  cloudformation.yml  pyproject.toml
disney_scrapper/: duplication_checker.py  extract.py  lambda_handler.py  load.py  transform.py
