[tool.poetry]
name = "disney-scrapper"
version = "0.1.0"
description = ""
authors = ["WillCallahan <willcallahan94@att.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"

[tool.poetry.group.dev.dependencies]
boto3 = "^1.36.15"

[tool.poetry-plugin-lambda-build]
package-artifact-path = "dist/disney-scrapper.zip"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
